--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,11 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongo-java-driver</artifactId>
+      <version>3.0.2</version>
+    </dependency>
   </dependencies>
 </project>
