--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,38 @@
       <scope>test</scope>
     </dependency>
 
+    <!--To work with MongoDB Documents-->
     <dependency>
       <groupId>org.mongodb</groupId>
       <artifactId>mongo-java-driver</artifactId>
       <version>3.0.2</version>
     </dependency>
+
+    <!--For Open MQ-->
+    <dependency>
+      <groupId>javax.jms</groupId>
+      <artifactId>javax.jms-api</artifactId>
+      <version>2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.mq</groupId>
+      <artifactId>imq</artifactId>
+      <version>4.5.2</version>
+    </dependency>
+
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.3</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
