--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <es.version>2.1.1</es.version>
   </properties>
 
   <dependencies>
@@ -38,6 +39,13 @@
       <groupId>org.glassfish.mq</groupId>
       <artifactId>imq</artifactId>
       <version>4.5.2</version>
+    </dependency>
+
+    <!--ElasticSearch libs-->
+    <dependency>
+      <groupId>org.elasticsearch</groupId>
+      <artifactId>elasticsearch</artifactId>
+      <version>${es.version}</version>
     </dependency>
 
   </dependencies>
