--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,18 @@
       <version>${es.version}</version>
     </dependency>
 
+    <!--Gson for serialization-->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
